fixed letter spacing (navbar)

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -97,7 +97,7 @@ section .heading h2 {
 .navbar {
     background-color: #444 !important;
     font-size: 12px;
-    letter-spacing: 4px;
+    letter-spacing: 1px;
     //text-transform: uppercase;
     font-weight: bold;
     color: #fff;
